# cmake-tests-tooling-for-cpp-Course

./: .gitignore  README.md
section_2_modern_cmake/12_hello_world_example/: CMakeLists.txt  main.cc
section_2_modern_cmake/14_basic_project_structure/: CMakeLists.txt
section_2_modern_cmake/15_intermediate_project_stucture/: CMakeLists.txt
section_2_modern_cmake/15_intermediate_project_stucture_subfolder_ver/src/my_lib/: CMakeLists.txt
section_2_modern_cmake/16_variables_and_options/: CMakeLists.txt
section_2_modern_cmake/16_variables_and_options/app/: main.cc
section_2_modern_cmake/16_variables_and_options/src/my_lib/: CMakeLists.txt
section_2_modern_cmake/17_cmake_command_line_part2/: CMakeCommands.md
section_2_modern_cmake/18_configure_file/: CMakeLists.txt
section_2_modern_cmake/18_configure_file/app/: CMakeLists.txt  main.cc
section_2_modern_cmake/18_configure_file/src/my_lib/: CMakeLists.txt
section_2_modern_cmake/19_sources_and_headers/: notes.txt
section_2_modern_cmake/19_sources_and_headers/configured/: config.hpp.in
section_2_modern_cmake/20_CMake_Command_Line-Part3/: CMakeCommands.md
section_2_modern_cmake/21_external_libraries_with_gitsubmodule/: CMakeLists.txt  notes.txt
section_2_modern_cmake/21_external_libraries_with_gitsubmodule/cmake/: AddGitSubmodule.cmake
section_2_modern_cmake/21_external_libraries_with_gitsubmodule/src/: CMakeLists.txt
section_2_modern_cmake/21_external_libraries_with_gitsubmodule/src/my_lib/: CMakeLists.txt  my_lib.cc
section_2_modern_cmake/22_dependency_graph_part_1/: MakeFile  notes.txt
section_2_modern_cmake/23_external_libraries_with_fetch_content/: CMakeLists.txt  notes.txt
section_2_modern_cmake/23_external_libraries_with_fetch_content/app/: main.cc
section_2_modern_cmake/23_external_libraries_with_fetch_content/cmake/: AddGitSubmodule.cmake
section_2_modern_cmake/23_external_libraries_with_fetch_content/configured/: CMakeLists.txt
section_2_modern_cmake/23_external_libraries_with_fetch_content/src/my_lib/: my_lib.cc
section_2_modern_cmake/24_doxygen_documentation/: CMakeLists.txt  notes.txt
section_2_modern_cmake/24_doxygen_documentation/app/: CMakeLists.txt
section_2_modern_cmake/24_doxygen_documentation/src/my_lib/: my_lib.cc
section_2_modern_cmake/25_unit_testing_with_catch2/: CMakeLists.txt  notes.txt
section_2_modern_cmake/25_unit_testing_with_catch2/src/my_lib/: my_lib.cc  my_lib.h
section_2_modern_cmake/26_dependency_graph_part_2/configured/: config.hpp.in
section_2_modern_cmake/26_dependency_graph_part_2/tests/: CMakeLists.txt
section_2_modern_cmake/27_public_interface_and_private/: notes.txt
section_2_modern_cmake/28_adding_compiler_warnings/src/my_lib/: CMakeLists.txt
section_2_modern_cmake/29_sanitizers/: CMakeLists.txt
section_2_modern_cmake/29_sanitizers/app/: CMakeLists.txt
section_2_modern_cmake/31_ipo_lto_in_cmake/: CMakeLists.txt
section_2_modern_cmake/31_ipo_lto_in_cmake/app/: CMakeLists.txt  main.cc
section_2_modern_cmake/31_ipo_lto_in_cmake/cmake/: LTO.cmake  Sanitizers.cmake
section_2_modern_cmake/31_ipo_lto_in_cmake/src/my_lib/: CMakeLists.txt
section_3_cpp_project_templates/CppProjectTemplate-master/: CMakeLists.txt  CMakeUserPresets.json  FormatterAnalyzer.md  Makefile  notes.txt
section_3_cpp_project_templates/CppProjectTemplate-master/app/: CMakeLists.txt
section_3_cpp_project_templates/CppProjectTemplate-master/cmake/: ConfigSafeGuards.cmake  LTO.cmake  Tools.cmake  Warnings.cmake
source/2_CMake/11_Warnings/: CMakeLists.txt
source/2_CMake/11_Warnings/app/: CMakeLists.txt  main.cc
source/2_CMake/11_Warnings/cmake/: Warnings.cmake
